update route, dns for singbox

--- a/base/config/ACL4SingBox_Online_Mini.ini
+++ b/base/config/ACL4SingBox_Online_Mini.ini
@@ -28,12 +28,12 @@ ruleset=🚀 Select,Telegram 使用的 IP 地址列表+https://testingcf.jsdeliv
 ; ruleset=🎯 Global,[]GEOIP,CN
 ruleset=🐟 Fallback,[]FINAL
 
-custom_proxy_group=🚀 Select`select`[]♻️ Auto`[]DIRECT`.*
+custom_proxy_group=🚀 Select`select`[]♻️ Auto`.*
 custom_proxy_group=♻️ Auto`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 Direct`select`[]DIRECT
-custom_proxy_group=🎯 Global`select`[]DIRECT`[]🚀 Select`[]♻️ Auto
+custom_proxy_group=🎯 Global`select`[]🚀 Select`[]♻️ Auto`[]DIRECT
 custom_proxy_group=🛑 Block`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Fallback`select`[]🚀 Select`[]🎯 Global`[]♻️ Auto`.*
+custom_proxy_group=🐟 Fallback`select`[]🚀 Select`[]🎯 Global`[]♻️ Auto`[]DIRECT
 
 enable_rule_generator=true
 overwrite_original_rules=true
