modify ci build rules

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,10 @@ name: GitHub CI
 on:
   push:
     branches: [ dev ]
+    paths-ignore:
+      - ".github/**"
     tags:
-      - '**'
+      - 'v*'
   workflow_dispatch:
   pull_request:
 
