修改singbox 路由规则

--- a/base/config/ACL4SingBox_Online_Mini.ini
+++ b/base/config/ACL4SingBox_Online_Mini.ini
@@ -1,39 +1,23 @@
 [custom]
-;不要随意改变关键字，否则会导致出错
-;acl4SSR规则-在线版
 
-;去广告：支持
-;自动测速：支持
-;微软分流：不支持
-;苹果分流：不支持
-;增强中国IP段：不支持
-;增强国外GFW：不支持
+#ruleset=🚀 Select,GFW 域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/gfw.srs
+ruleset=direct,中国大陆 IP 地址列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs
+ruleset=direct,中国大陆域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs
+ruleset=direct,局域网IP+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs
+ruleset=block,category-ads-all+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs
+ruleset=block,geosite-category-ads-all+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-category-ads-all.srs
+ruleset=block,geosite-malware+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-malware.srs
+ruleset=block,geosite-phishing+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-phishing.srs
 
-# ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-# ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-# ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-# ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-# ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-# ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-# ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-# ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-# ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-# ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🚀 Select,GFW 域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/gfw.srs
-ruleset=🎯 Direct,中国大陆 IP 地址列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs
-ruleset=🎯 Direct,中国大陆域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs
-ruleset=🛑 Block,广告域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs
-ruleset=🚀 Select,非中国大陆使用的顶级域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/tld-!cn.srs
-ruleset=🚀 Select,Telegram 使用的 IP 地址列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/telegram.srs
-; ruleset=🎯 Global,[]GEOIP,CN
-ruleset=🐟 Fallback,[]FINAL
+#ruleset=🚀 Select,非中国大陆使用的顶级域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/tld-!cn.srs
+#ruleset=🚀 Select,Telegram 使用的 IP 地址列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/telegram.srs
+#ruleset=🎯 Global,[]GEOIP,CN
+ruleset=🚀 Select,[]FINAL # final路由
 
-custom_proxy_group=🚀 Select`select`[]♻️ Auto`.*
+custom_proxy_group=🚀 Select`select`[]♻️ Auto`[]direct`.*
 custom_proxy_group=♻️ Auto`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 Direct`select`[]DIRECT
-custom_proxy_group=🎯 Global`select`[]🚀 Select`[]♻️ Auto`[]DIRECT
-custom_proxy_group=🛑 Block`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 Fallback`select`[]🚀 Select`[]🎯 Global`[]♻️ Auto`[]DIRECT
+#custom_proxy_group=🎯 Direct`select`[]direct
+#custom_proxy_group=🛑 Block`select`[]REJECT`[]direct
 
 enable_rule_generator=true
 overwrite_original_rules=true
