--- a/base/config/ACL4SingBox_Online_Mini.ini
+++ b/base/config/ACL4SingBox_Online_Mini.ini
@@ -1,8 +1,8 @@
 [custom]
 
 #ruleset=🚀 Select,GFW 域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/gfw.srs
-ruleset=direct,中国大陆 IP 地址列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/cn.srs
-ruleset=direct,中国大陆域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/cn.srs
+ruleset=direct,中国大陆 IP 地址列表+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geoip-cn.srs
+ruleset=direct,中国大陆域名列表+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-cn.srs
 ruleset=direct,局域网IP+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs
 ruleset=block,category-ads-all+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs
 ruleset=block,geosite-category-ads-all+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-category-ads-all.srs
