--- a/config/ACL4SingBox_Online_Full.ini
+++ b/config/ACL4SingBox_Online_Full.ini
@@ -1,17 +1,24 @@
 [custom]
 
-#ruleset=🚀 Select,GFW 域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/gfw.srs
+## direct mode
 ruleset=direct,geoip-cn+https://raw.githubusercontent.com/3zsvvev7/mini_rule_set/master/geoip-cn.srs
 ruleset=direct,geosite-cn+https://raw.githubusercontent.com/3zsvvev7/mini_rule_set/master/geosite-cn.srs
 ruleset=direct,private+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs
-ruleset=block,category-ads-all+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/category-ads-all.srs
+
+## block mode
+ruleset=block,category-ads-all+https://github.com/3zsvvev7/mini_rule_set/raw/master/blocked.srs
 ruleset=block,geosite-category-ads-all+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-category-ads-all.srs
 ruleset=block,geosite-malware+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-malware.srs
 ruleset=block,geosite-phishing+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-phishing.srs
-#ruleset=🚀 Select,非中国大陆使用的顶级域名列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/tld-!cn.srs
-#ruleset=🚀 Select,Telegram 使用的 IP 地址列表+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/telegram.srs
+
+## proxy mode
+ruleset=🚀 Select,GFW+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/gfw.srs
+ruleset=🚀 Select,geosite-!cn+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/tld-!cn.srs
+ruleset=🚀 Select,Telegram-IPS+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/telegram.srs
 #ruleset=🎯 Global,[]GEOIP,CN
-ruleset=🚀 Select,[]FINAL # final路由
+
+## final路由
+ruleset=🚀 Select,[]FINAL #
 
 custom_proxy_group=🚀 Select`select`[]♻️ Auto`[]direct`.*
 custom_proxy_group=♻️ Auto`url-test`.*`http://www.gstatic.com/generate_204`300,,50
