--- a/config/ACL4SingBox_Online_Full_NoAds.ini
+++ b/config/ACL4SingBox_Online_Full_NoAds.ini
@@ -6,10 +6,10 @@ ruleset=direct,geosite-cn+https://raw.githubusercontent.com/3zsvvev7/mini_rule_s
 ruleset=direct,private+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geoip/private.srs
 
 ## block mode
-# ruleset=block,category-ads-all+https://github.com/3zsvvev7/mini_rule_set/raw/master/blocked.srs
-# ruleset=block,geosite-category-ads-all+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-category-ads-all.srs
-# ruleset=block,geosite-malware+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-malware.srs
-# ruleset=block,geosite-phishing+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-phishing.srs
+ruleset=block,category-ads-all+https://github.com/3zsvvev7/mini_rule_set/raw/master/blocked.srs
+ruleset=block,geosite-category-ads-all+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-category-ads-all.srs
+ruleset=block,geosite-malware+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-malware.srs
+ruleset=block,geosite-phishing+https://raw.githubusercontent.com/Chocolate4U/Iran-sing-box-rules/rule-set/geosite-phishing.srs
 
 ## proxy mode
 ruleset=🚀 Select,GFW+https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/gfw.srs
